--- a/src/templates/nodes/custom/dillo_post/edit_embed.pug
+++ b/src/templates/nodes/custom/dillo_post/edit_embed.pug
@@ -26,7 +26,7 @@
 					placeholder="{{ _('Press Ctrl+V or Command+V to paste or type the URL') }}",
 					value="{{ node.properties.content }}")
 					#item-icon.loading
-						img(src="https://www.google.com/s2/favicons?domain={{ node.properties.content }}")
+						img(src="https://www.google.com/s2/favicons?domain={{ node.properties.content }}", alt="Favicon")
 
 				.input-content.name
 					label(for="name") {{ _('Title') }}
