Comments: Style authors name on comments

--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -727,6 +727,14 @@ body[data-context="post-edit"]
         &:hover
           color: var(--community-theme-color, $color-primary) !important
 
+      .comment-author a
+        color: var(--community-theme-color, $color-primary) !important
+        text-decoration: none !important
+        font-weight: normal
+
+        &:hover
+          text-decoration: underline !important
+
       &.is-first
         border-color: $color-background-dark
 
