--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -17,7 +17,7 @@
   justify-content: center
   position: relative
 
-  iframe, img
+  iframe, img, video
     max-height: 600px
     max-width: 100%
 
@@ -574,6 +574,16 @@ body[data-context="post-edit"]
   color: $color-text-strong
   font-size: 16px
   line-height: 1.5em
+
+  iframe, video
+    max-width: 100%
+    width: 100%
+
+  iframe[src^="https://www.youtube"]
+    +media-xs
+      iframe
+        min-height: 420px
+    min-height: 500px
 
 
 // Specific tweaks to item view embed when link or text
