--- a/src/templates/dillo/index.pug
+++ b/src/templates/dillo/index.pug
@@ -138,19 +138,21 @@ li
 	#list-item
 		| {% if 'post' in col_right %}
 		.item-view.loading
-			.item-content
-				.item-rating-box
-					.item-rating.up
-						i.pi-angle-up
-					.item-rating.value &#x221e;
-					.item-rating.down
-						i.pi-angle-down
-				.item-details
-					a#item-title.item-title {{ col_right['post']['name'] }}
-					ul
-						li
-							i.pi-spin.spin
-							span {{ _('Fetching the goods...') }}
+			.item-view-header
+				.item-content
+					.item-rating-box
+						.item-rating.up
+							i.pi-angle-up
+						.item-rating.value &#x221e;
+						.item-rating.down
+							i.pi-angle-down
+					.item-details
+						a#item-title.item-title {{ col_right['post']['name'] }}
+						ul
+							li
+								i.pi-spin.spin
+								span {{ _('Fetching the goods...') }}
+			.item-body
 
 		| {% elif 'activities' in col_right %}
 		.welcome
