--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -599,8 +599,10 @@ body[data-context="post-edit"]
   border-radius: 3px
   box-shadow: 1px 2px 2px $color-background-dark
   margin: 9px 10px 5px
+  min-height: 480px
   top: 0
   transition: box-shadow 150ms ease-out, transform 150ms ease-out
+  will-change: transform
 
   &-header
     display: flex
