Item view: Display author

--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -273,6 +273,8 @@ $item-thumbnail-size: 90px
         text-transform: capitalize
 
       &.item-author
+        +media-xs
+          display: none
         text-overflow: ellipsis
 
 
