Item media preview: Only expand post thumbnails
Also, display a spinner while we are loading the image

--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -203,6 +203,8 @@ body[data-context='post-fullscreen']
 
   &.preview
     pointer-events: auto
+    color: rgba($color-background, .2)
+    font-size: 2em
 
     .overlay-background
       align-items: center
