--- a/src/templates/dillo/user.pug
+++ b/src/templates/dillo/user.pug
@@ -5,7 +5,7 @@
 
 #col_main.listing-list
 	#list-hits
-		| {% for post in posts['_items'] %}
+		| {% for post in posts %}
 
 		| {% if post.properties.post_type == 'link' %}
 		| {% set is_link = true %}
@@ -19,7 +19,7 @@
 		| {% endif %}
 
 		| {% set rating = (post.properties.rating_positive - post.properties.rating_negative) %}
-		| {% set post_url = url_for('posts.view', community_url=project.url, post_shortcode=post.properties.shortcode) %}
+		| {% set post_url = url_for('posts.view', community_url=post.project[0]['url'], post_shortcode=post.properties.shortcode) %}
 
 		.list-hits-item(
 			id="item-{{ post._id }}",
