CSS: Style horizontal lines

--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -16,6 +16,12 @@ a
 h1
   font-size: 1.8em
 
+hr
+  width: 100%
+  height: 1px
+  background-color: $color-background-dark
+  border: none
+
 body[data-context='post-fullscreen']
   .d-header
     box-shadow: 0 0 15px 5px $color-background-dark
