--- a/src/styles/settings_dark.sass
+++ b/src/styles/settings_dark.sass
@@ -10,6 +10,7 @@
 
 // Not cool. It has too many Blender Cloud stuff, needs splitting.
 @import ../../../pillar/src/styles/base
+@import ../../../pillar/src/styles/_user
 
 @import ../../../pillar/src/styles/plugins/_js_select2
 
@@ -18,3 +19,5 @@
 @import _list
 @import _user
 @import _error
+
+@import _settings_base
