File structure: Move layout.html to the root

--- a/src/templates/dillo/index.pug
+++ b/src/templates/dillo/index.pug
@@ -1,4 +1,4 @@
-| {% extends 'dillo/layout.html' %}
+| {% extends 'layout.html' %}
 | {% set page_name = 'posts-index' %}
 
 | {% if main_project._id == project._id %}
