--- a/src/templates/dillo/user.pug
+++ b/src/templates/dillo/user.pug
@@ -1,4 +1,4 @@
-| {% extends 'dillo/layout.html' %}
+| {% extends 'layout.html' %}
 | {% block page_title %}{{ user.full_name }} {% endblock %}
 | {% set page_name = 'posts-index' %}
 
