--- a/src/templates/users/settings/page.pug
+++ b/src/templates/users/settings/page.pug
@@ -1,11 +1,17 @@
 | {% extends 'users/settings/base.html' %}
+| {% block stylesheets %}
+link(rel='stylesheet', title="light", type="text/css", href="{{ url_for('static_dillo', filename='css/settings.css') }}")
+link(disabled, rel='alternate stylesheet', title="dark", type="text/css", href="{{ url_for('static_dillo', filename='css/settings_dark.css') }}")
+| {% endblock stylesheets %}
+
 | {% block settings_sidebar_menu %}
 | {{ super() }}
 a(class="{% if title == 'links' %}active{% endif %}",
 	href="{{ url_for('settings.links') }}")
 	li
-		i.pi-vcard
-		| Links
+		i.pi-link
+		| {{ _("Links") }}
+
 | {% endblock settings_sidebar_menu %}
 | {% block settings_sidebar_menu_bottom %}
 | {% endblock settings_sidebar_menu_bottom %}
