--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -634,29 +634,12 @@ body[data-context="post-edit"]
 
   &.text
     .item-body
-      +list-bullets
       +media-lg
         padding: 20px 65px
 
-      background-color: $color-background-lighter
+      +node-details-description
+
       padding: 20px
-
-      img
-        max-width: 100%
-
-      h1
-        line-height: 1.2em
-
-      h2
-        margin-top: 35px
-        margin-bottom: 10px
-
-      blockquote
-        display: block
-        background-color: $color-background
-        border-left: thick solid $color-background-dark
-        padding: 1px 10px
-        margin: 0
 
   &.link
     .item-body
