--- a/src/styles/_settings_base.sass
+++ b/src/styles/_settings_base.sass
@@ -6,19 +6,37 @@
 		width: 100%
 
 .settings-form
-	.fieldset-item
+	.fieldset-row
 		display: flex
 		margin: 10px auto
 
 		input[type="text"],
 		input[type="url"]
 			background-color: $color-background
-			margin-right: 10px
+			display: block
 			padding: 5px 10px
-			flex: 1
+			width: 100%
 
 		.btn
 			margin-left: auto
 
 		.btn i
 			margin-right: 0
+
+		&-error
+			color: $color-danger
+			font-size: $font-size-small
+			padding-top: 5px
+
+	.fieldset-field
+		flex: 1
+		margin-right: 10px
+		padding:
+			top: 5px
+			right: 25px
+
+		input
+			flex: 1
+
+	.fieldset-field-action
+		padding-top: 5px
