Display user links on profile

--- a/src/styles/_settings_base.sass
+++ b/src/styles/_settings_base.sass
@@ -40,3 +40,8 @@
 
 	.fieldset-field-action
 		padding-top: 5px
+
+	.fieldset-notice
+		color: $color-text-dark-primary
+		display: none
+		padding-left: 10px
