--- a/src/styles/_user.sass
+++ b/src/styles/_user.sass
@@ -6,20 +6,30 @@
 		padding: 50px 25px
 
 		&-info
-			+list-bullets
-			padding: 0 15px
+			padding: 0 10px
+			margin-left: 25px
+			border-left: thin solid $color-background-dark
 
 		&-name
-			font-size: 2em
-			padding: 5px
+			font-size: 1.8em
+			padding-left: 10px
+
+		&-username
+			color: $color-text-dark-secondary
+			padding-left: 10px
+			text-decoration: none
 
 		&-meta
-			padding: 0
-			margin: 0
+			color: $color-text-dark-secondary
+			font-size: $font-size-small
+			margin: 20px 0 0
 
 			strong
 				margin-right: 5px
-				color: $color-text-dark
+
+		ul
+			list-style: none
+			padding: 0
 
 		&-avatar
 			img
@@ -27,3 +37,18 @@
 				border-radius: 50%
 				box-shadow: 1px 2px 2px rgba(black, .2)
 				padding: 5px
+
+		&-links
+			padding: 0 10px
+
+			ul
+				li a
+					align-items: center
+					display: flex
+					text-decoration: none
+
+					&:hover
+						text-decoration: underline
+
+				img
+					margin-right: 10px
